# git_explorer

./: Cargo.toml  README.md  TODO.md
src/: graph.rs  main.rs  utils.rs
src/explorer/: branch_data.rs  git_wrapper.rs  graph_node.rs  kernel.rs  mod.rs  parsed_diff.rs
src/ui/: app.rs  branches.rs  graph.rs  home.rs  mod.rs
src/ui/graph/: action_key.rs  mod.rs
