[package]
name = "git_explorer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.git2]
version = "~0.13"
default-features = false

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
crossterm = { version = "0.19", features = [ "serde" ] }
tui = { version = "0.14", default-features = false, features = ['crossterm', 'serde'] }
log4rs = "1.2.0"
log = "0.4.17"

